# zettel

./: .gitignore  parse_pdf.py  prompt.txt  pyproject.toml  requirements.txt  transcribe_notes.py
src/zettel/: ai_services.py  cli.py  config.py  exceptions.py  note_generator.py  pdf_parser.py  processor.py
templates/: literature_template.md  permanent_template.md
